--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,8 @@
 @import './constants/base.scss';
 @import './libs/swiper.scss';
 @import './components/cards.scss';
+@import './components/checkbox-box.scss';
+@import './components/sliders.scss';
 
 
 .header,
@@ -169,6 +171,219 @@
     span {
       display: block;
       font-size: 64px;
+    }
+  }
+}
+
+.services {
+  padding: 80px 0 67px;
+
+  &__title {
+    margin-bottom: 32px;
+  }
+
+  &__slide-item {
+    margin: 13px;
+  }
+
+  &__slide-info {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__slide-title {
+    font-size: 20px;
+    line-height: 1.35;
+    padding: 24px;
+    background-color: $bg-cart;
+    border-radius: 3px;
+    max-width: 300px;
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.consultation {
+  background-image: $gradient, url('../images/sec-7.webp');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 98px 0 110px;
+
+  &__subtitle {
+    font-size: 38px;
+    max-width: 520px;
+    margin-bottom: 45px;
+
+    span {
+      @extend %roboto-500;
+    }
+  }
+
+  &__form {
+    max-width: 372px;
+  }
+
+  &__form-input {
+    width: 100%;
+    padding: 18px;
+    color: $light-text;
+    border: 1px solid $border-light;
+    border-radius: 3px;
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
+
+  &__form-btn {
+    @extend %btn;
+    width: 100%;
+    margin-bottom: 25px;
+  }
+}
+
+.portfolio {
+  padding: 80px 0;
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(280px, 1fr));
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+
+  &__item {
+    padding: 30px;
+    box-shadow: $shadow;
+    border-radius: 3px;
+  }
+
+  &__item-img {
+    box-shadow: $shadow;
+    border-radius: 3px;
+    margin-bottom: 30px;
+  }
+
+  &__item-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  &__item-title {
+    @extend %roboto-500;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  &__item-bottom {
+    margin-top: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin-right: 44px;
+  }
+
+  &__item-link:hover {
+    text-decoration: underline;
+  }
+
+  &__btn {
+    @extend %btn;
+    padding: 20px 40px;
+    margin-left: auto;
+  }
+}
+
+.reviews {
+  &__title {
+    margin-bottom: 40px;
+  }
+
+  &__slider {
+    margin-bottom: 75px;
+  }
+
+  &__slide-item {
+    margin: 5px 21px;
+  }
+}
+
+.reviews-bottom {
+  background-color: $bg;
+  padding: 48px 0 47px;
+}
+
+.team{
+  padding: 80px 0;
+  &__items{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(280px, 1fr));
+    gap: 32px;
+  }
+  &__item{
+    box-shadow: $shadow;
+    border-radius: 3px;
+    padding: 30px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__item-img{
+    width: 218px;
+    height: 218px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+  }
+  &__item-title{
+    @extend %roboto-500;
+    font-size: 20px;
+    line-height: 1.35;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
+
+.guarantee{
+  padding-bottom: 80px;
+  &__title{
+    margin-bottom: 10px;
+  }
+  &__subtitle{
+    @extend %roboto-300;
+    font-size: 24px;
+    line-height: 1.35;
+    margin: 0;
+    margin-bottom: 30px;
+  }
+  &__items{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+  }
+  &__item{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 25px;
+    text-align: center;
+    align-items: center;
+    max-width: 245px;
+  }
+  &__item-img{
+    width: 84px;
+    height: 84px;
+  }
+  &__item-text{
+    margin: 0;
+    strong{
+      display: block;
     }
   }
 }
