--- a/app/scss/components/sliders.scss
+++ b/app/scss/components/sliders.scss
@@ -36,6 +36,12 @@
     background-color: $accent;
   }
 
+  .slick-disabled:hover::before,
+  .slick-disabled::before {
+    background-color: #e1e1e1;
+    background-image: url('../images/icons/arrow.svg');
+  }
+
   .slick-prev {
     left: -10px;
     transform: rotate(180deg);
@@ -44,5 +50,83 @@
   .slick-next {
     left: auto;
     right: -10px;
+  }
+
+  .slick-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin: 0;
+    li{
+      padding: 0;
+      margin: 0;
+    }
+
+    li button{
+      padding: 0;
+      margin: 0;
+      font-size: 0;
+      width: 15px;
+      height: 15px;
+      border-radius: 50%;
+      border: none;
+      background-color: #e1e1e1;
+      cursor: pointer;
+      box-shadow: $shadow;
+      transition: all .3s;
+    }
+
+    li.slick-active button,
+    li:hover button{
+      background-color: $accent;
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .slider {
+    .slick-prev {
+      left: 0;
+    }
+
+    .slick-next {
+      right: 0;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .slider {
+    .slick-arrow::before {
+      width: 30px;
+      height: 30px;
+      background-size: 75%;
+    }
+
+    .slick-prev {
+      left: 10px;
+    }
+
+    .slick-next {
+      right: 10px;
+    }
+  }
+}
+@media (max-width: 992px) {
+  .slider {
+    .slick-arrow::before {
+      width: 44px;
+      height: 44px;
+      background-size: auto;
+    }
+
+    .slick-prev {
+      left: 0;
+    }
+
+    .slick-next {
+      right: 0;
+    }
   }
 }
