--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,8 @@
 @import './constants/vars.scss';
 @import './constants/null.scss';
 @import './constants/base.scss';
-@import './libs/swiper.scss';
+@import './libs/slick.scss';
+@import './libs/fancybox.scss';
 @import './components/cards.scss';
 @import './components/checkbox-box.scss';
 @import './components/sliders.scss';
@@ -16,11 +17,9 @@
 }
 
 .phytowall {
-  position: relative;
 
   .decor-1 {
-    right: 0;
-    top: -4%;
+    top: -75%;
   }
 }
 
@@ -47,7 +46,6 @@
   }
 
   &__btn {
-    @extend %btn;
     padding: 20px 40px;
   }
 }
@@ -62,8 +60,10 @@
   }
 
   &__item {
-    width: 190px;
-    height: 190px;
+    max-width: 190px;
+    max-height: 190px;
+    height: 100%;
+    width: 100%;
     padding-top: 30px;
     margin-top: -44px;
     background-color: #fff;
@@ -90,12 +90,11 @@
   position: relative;
 
   .decor-2 {
-    left: 0;
     bottom: 17%;
   }
 
   &__items {
-    grid-template-columns: repeat(2, minmax(280px, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 40px;
   }
 
@@ -109,7 +108,6 @@
   position: relative;
 
   .decor-3 {
-    right: 0;
     top: -28%;
   }
 }
@@ -120,7 +118,7 @@
 
 .landscaping-bottom {
   &__items {
-    grid-template-columns: repeat(3, minmax(280px, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 30px;
   }
 
@@ -139,18 +137,16 @@
   position: relative;
 
   .decor-4 {
-    left: 0;
     top: -40%;
   }
 
   .decor-5 {
-    right: 0;
     bottom: -30%;
   }
 
   &__items {
     display: grid;
-    grid-template-columns: repeat(3, minmax(280px, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 30px;
   }
 
@@ -158,6 +154,9 @@
     position: relative;
     box-shadow: $shadow;
     border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__item-img {
@@ -171,7 +170,7 @@
     border-radius: inherit;
     padding: 20px 5px 25px;
     text-align: center;
-    min-height: 178px;
+    height: 100%;
   }
 
   &__item-title {
@@ -218,6 +217,10 @@
     margin: 13px;
   }
 
+  &__slide-img {
+    width: 100%;
+  }
+
   &__slide-info {
     position: absolute;
     top: 0;
@@ -230,9 +233,10 @@
   }
 
   &__slide-title {
-    font-size: 20px;
+    @extend %roboto-400;
+    font-size: 19px;
     line-height: 1.35;
-    padding: 24px;
+    padding: 24px 0;
     background-color: $bg-cart;
     border-radius: 3px;
     max-width: 300px;
@@ -251,7 +255,7 @@
   &__subtitle {
     font-size: 38px;
     max-width: 520px;
-    margin-bottom: 45px;
+    margin: 0 0 45px;
 
     span {
       @extend %roboto-500;
@@ -273,7 +277,6 @@
   }
 
   &__form-btn {
-    @extend %btn;
     width: 100%;
     margin-bottom: 25px;
   }
@@ -284,26 +287,29 @@
   position: relative;
 
   .decor-6 {
-    left: 0;
     bottom: 0;
   }
 
   .decor-7 {
-    right: 0;
     bottom: -20%;
   }
 
   &__items {
     display: grid;
-    grid-template-columns: repeat(2, minmax(280px, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 20px;
     margin-bottom: 20px;
   }
 
   &__item {
+    display: block;
     padding: 30px;
     box-shadow: $shadow;
     border-radius: 3px;
+
+    &:hover .portfolio__item-link:last-child {
+      text-decoration: underline;
+    }
   }
 
   &__item-img {
@@ -329,15 +335,11 @@
     display: flex;
     justify-content: space-between;
     align-items: start;
-    margin-right: 44px;
   }
 
-  &__item-link:hover {
-    text-decoration: underline;
-  }
+
 
   &__btn {
-    @extend %btn;
     padding: 20px 40px;
     margin-left: auto;
   }
@@ -366,18 +368,17 @@
   padding: 80px 0;
   position: relative;
 
-  .decor-8{
-    left: 0;
+  .decor-8 {
     top: 12%;
   }
-  .decor-9{
-    right: 0;
+
+  .decor-9 {
     top: 20%;
   }
 
   &__items {
     display: grid;
-    grid-template-columns: repeat(3, minmax(280px, 1fr));
+    grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 32px;
   }
 
@@ -392,10 +393,19 @@
   }
 
   &__item-img {
-    width: 218px;
-    height: 218px;
+    max-width: 218px;
+    max-height: 218px;
+    height: 100%;
+    width: 100%;
     border-radius: 50%;
     margin-bottom: 30px;
+  }
+
+  &__item-info {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__item-title {
@@ -404,6 +414,10 @@
     line-height: 1.35;
     text-align: center;
     margin-bottom: 20px;
+  }
+
+  &__item-text {
+    margin: 0;
   }
 }
 
@@ -516,7 +530,6 @@
       height: 3px;
       background-color: #fff;
       border-radius: 3px;
-      transform: rotate(-5deg);
     }
   }
 }
@@ -535,10 +548,15 @@
     border-radius: 3px;
   }
 
-  &__subtitle {
+  &__title {
     font-size: 38px;
-    max-width: 520px;
-    margin-bottom: 45px;
+    margin-bottom: 23px;
+  }
+
+  &__subtitle {
+    font-size: 24px;
+    max-width: 430px;
+    margin-bottom: 35px;
 
     span {
       @extend %roboto-500;
@@ -546,12 +564,12 @@
   }
 
   &__form {
-    max-width: 372px;
+    max-width: 430px;
   }
 
   &__form-input {
     width: 100%;
-    padding: 18px;
+    padding: 18px 20px;
     color: $light-text;
     border: 1px solid $border-light;
     border-radius: 3px;
@@ -560,9 +578,8 @@
   }
 
   &__form-btn {
-    @extend %btn;
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: 23px;
   }
 }
 
@@ -570,12 +587,11 @@
   padding-top: 80px;
   position: relative;
 
-  .decor-10{
-    left: 0;
+  .decor-10 {
     top: 0;
   }
-  .decor-11{
-    right: 0;
+
+  .decor-11 {
     top: 10%;
   }
 
@@ -594,8 +610,8 @@
   }
 
   .open-item {
-    width: 20px;
-    height: 20px;
+    min-width: 20px;
+    min-height: 20px;
     border-radius: 50%;
     color: #fff;
     background-color: $default;
@@ -605,7 +621,7 @@
     line-height: 0;
     transition: all .3s;
   }
-
+  
   &__item-bottom {
     background-color: $accent;
     border-radius: 3px;
@@ -618,13 +634,13 @@
     transition: all .3s;
   }
 
-  &__item-top.active {
+  &__item.active {
     .open-item {
       background-color: $accent;
       transform: rotate(45deg);
     }
 
-    &+.questions__item-bottom {
+    .questions__item-bottom {
       transform: rotateX(0deg);
       opacity: 1;
       margin: 1px 0;
@@ -636,4 +652,302 @@
 
 .decor {
   position: absolute;
+
+  &__right {
+    right: -28%;
+  }
+
+  &__left {
+    left: -28%;
+  }
+}
+
+@media (max-width: 1200px) {
+  .decor {
+    display: none;
+  }
+
+  .guarantee {
+    &__item {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+
+  .phytowall-top,
+  .section-2,
+  .landscaping,
+  .quality,
+  .services,
+  .consultation,
+  .portfolio,
+  .team,
+  .consultation-2 {
+    padding: 60px 0;
+  }
+
+  .phytowall-top {
+    &__title {
+      margin-bottom: 40px;
+
+      span {
+        font-size: 24px;
+      }
+    }
+  }
+
+  .phytowall-bottom {
+    padding-bottom: 60px;
+
+    &__items {
+      flex-wrap: wrap;
+      gap: 50px;
+      justify-content: space-around;
+    }
+  }
+
+  .landscaping-top {
+    margin-bottom: 60px;
+  }
+
+  .quality,
+  .team {
+    &__items {
+      gap: 30px;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+
+  .consultation {
+    &__title {
+      margin-bottom: 10px;
+    }
+
+    &__subtitle {
+      font-size: 30px;
+      max-width: 500px;
+      margin: 0 0 35px;
+    }
+  }
+
+  .reviews {
+    &__slider {
+      margin-bottom: 60px;
+    }
+  }
+
+  .team {
+    &__item-img {
+      margin-bottom: 10px;
+    }
+
+    &__item-title {
+      margin-bottom: 10px;
+    }
+  }
+
+  .guarantee {
+    padding-bottom: 60px;
+
+    &__subtitle {
+      font-size: 20px;
+      text-align: center;
+      max-width: 600px;
+      margin: 0 auto 25px;
+    }
+
+    &__items {
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      gap: 25px;
+    }
+
+    &__item {
+      gap: 10px;
+    }
+  }
+
+  .advantages {
+    padding-bottom: 60px;
+
+    &__item:first-child {
+      font-size: 17px;
+    }
+  }
+  .questions{
+    padding-top: 60px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .section-2,
+  .landscaping,
+  .quality,
+  .services,
+  .portfolio,
+  .reviews-bottom,
+  .team {
+    padding: 30px 0;
+  }
+
+  .phytowall-bottom,
+  .guarantee {
+    padding-bottom: 30px;
+  }
+
+  .landscaping-top {
+    margin-bottom: 30px;
+  }
+
+  .services {
+    &__slide-title {
+      padding: 20px 0;
+      font-size: 14px;
+      max-width: 82%;
+    }
+  }
+
+  .portfolio {
+    &__item {
+      padding: 15px;
+    }
+
+    &__item-img {
+      margin-bottom: 15px;
+    }
+
+    &__item-text {
+      margin: 10px 0 15px;
+
+    }
+  }
+
+  .reviews {
+    &__slider {
+      margin-bottom: 30px;
+    }
+  }
+  .questions{
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 568px) {
+  .phytowall-top {
+    background-image: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0.93) 40.92%, rgba(255, 255, 255, 0) 72.72%),
+      url("../images/sec-1.webp");
+
+    &__title {
+
+      span {
+        font-size: 18px;
+      }
+
+    }
+
+    &__buttons {
+      justify-content: center;
+    }
+
+    &__btn {
+      font-size: 14px;
+      padding: 20px;
+    }
+  }
+
+  .quality,
+  .portfolio,
+  .team {
+    &__items {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+      gap: 20px;
+    }
+  }
+
+  .consultation {
+    background-image: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0.93) 80.92%, rgba(255, 255, 255, 0) 100%),
+      url("../images/sec-7.webp");
+
+    &__subtitle {
+      font-size: 20px;
+      max-width: 400px;
+      margin: 0 auto 25px;
+      text-align: center;
+    }
+
+    &__form {
+      margin: 0 auto;
+    }
+  }
+
+  .advantages {
+    padding-bottom: 30px;
+
+    &__items {
+      overflow: auto;
+    }
+
+    &__item {
+      width: 600px;
+    }
+  }
+
+  .consultation-2 {
+    &__subtitle {
+      margin: 0 auto 20px;
+      text-align: center;
+      font-size: 20px;
+    }
+  }
+
+  .questions{
+    &__item-top{
+      gap: 25px;
+    }
+  }
+}
+
+@media (max-width: 468px) {
+  .phytowall-top {
+    &__buttons {
+      flex-wrap: wrap;
+    }
+
+    &__btn {
+      width: 100%;
+    }
+  }
+
+  .consultation {
+    &__form {
+      max-width: 100%;
+    }
+  }
+
+  .portfolio {
+    &__btn {
+      width: 100%;
+    }
+  }
+
+  .consultation-2 {
+    &__inner {
+      padding: 20px;
+    }
+  }
+}
+
+@media (max-width: 420px) {
+  .reviews {
+    &__slide-item {
+      margin: 5px 60px;
+    }
+
+    &__slide-img {
+      width: 100%;
+    }
+  }
 }
