--- a/app/scss/components/cards.scss
+++ b/app/scss/components/cards.scss
@@ -52,8 +52,10 @@
 @media (max-width: 568px) {
   div {
     .cards-1 {
-      grid-template-columns: repeat(1, minmax(0, 1fr));
+      grid-template-columns: repeat(4, minmax(320px, 1fr));
       gap: 20px;
+      overflow: scroll;
+      padding-bottom: 15px;
     }
   }
 }
@@ -100,6 +102,21 @@
         max-width: 280px;
         width: 100%;
         gap: 5px;
+      }
+    }
+  }
+}
+
+@media (max-width: 568px) {
+  div {
+    .cards-2 {
+      flex-wrap: nowrap;
+      gap: 30px;
+      overflow: scroll;
+      padding-bottom: 15px;
+      justify-content: initial;
+      &__item{
+        min-width: 280px;
       }
     }
   }
