--- a/app/scss/components/checkbox-box.scss
+++ b/app/scss/components/checkbox-box.scss
@@ -1,6 +1,6 @@
 .checkbox-box {
   display: flex;
-  align-items: center;
+  align-items: start;
   gap: 10px;
 
   &__inp {
@@ -15,7 +15,7 @@
     border-radius: 3px;
   }
 
-  &__inp:checked + &__check {
+  &__inp:checked+&__check {
     background-image: url('../images/icons/check.svg');
     background-repeat: no-repeat;
     background-position: center;
@@ -24,5 +24,14 @@
   &__text {
     font-size: 12px;
     margin: 0;
+  }
+}
+
+
+@media (max-width: 568px) {
+  .checkbox-box {
+    &__check {
+      background-color: #fff9;
+    }
   }
 }
